# haaland

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  llms.txt  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
benchmarks/: RESULTS.md  datasets.py  results.json  run.py  run_anthropic.py
docs/: design-notes.md  enterprise.md  faq.md  format-by-example.md  llm-integration.md  quickstart.md  spec.md
examples/: basic_usage.py  llm_context.py
prompts/: agent-setup.md  system-prompt.md
src/haaland/: __init__.py  _decoder.py  _encoder.py  cli.py  errors.py  tokens.py
tests/: test_benchmark_datasets.py  test_cli.py  test_decoder.py  test_dense_profile.py  test_encoder.py  test_roundtrip.py
